--- a/sites/all/modules/filefield_paths/CHANGELOG.txt
+++ b/sites/all/modules/filefield_paths/CHANGELOG.txt
@@ -1,8 +1,19 @@
-// $Id: CHANGELOG.txt,v 1.1.2.9 2009/06/17 22:53:38 deciphered Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.14 2009/07/27 01:54:34 deciphered Exp $
 
 FileField Paths 6.x-1.x-dev, xxxx-xx-xx (development release)
 -----------------------------------
 
+- #525354: Fixed implementations of hook_filefield_paths_get_fields().
+- #522678 by chrisirhc: Fixed issue with Filepath variable and ImageField Crop.
+- #515044: Fixed [filefield-onlyname-original] token for PHP > 5.2.
+- Improved replace of unprocessed URLs for FileField Insert.
+- Added support for the Audio module.
+
+
+FileField Paths 6.x-1.3, 2009-07-03
+-----------------------------------
+
+- #494830: Added support for FileField Sources.
 - #488264: Added ImageField Crop module support.
 - #485528: Fixed issue with Content Type names containing spaces.
 - #480580 by Ralf: Fixed undefined indexes.
