upgraded to 1.9-beta1

--- a/sites/all/modules/contrib/feedapi/CHANGELOG.txt
+++ b/sites/all/modules/contrib/feedapi/CHANGELOG.txt
@@ -1,4 +1,13 @@
-// $Id: CHANGELOG.txt,v 1.1.2.4.2.23 2009/08/12 19:19:43 aronnovak Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.4.2.26 2009/09/18 16:41:23 alexb Exp $
+
+FeedAPI 1.9beta1, 2009-09-18
+----------------------------
+- Allow aggregation from local files
+- Feed Element Mapper 2.x support
+- Drupal 6.14 compatibility: Fix bug that stopped FeedAPI from refreshing 
+  at cron time #350788
+- Series of minor bug fixes
+
 FeedAPI 1.8, 2009-08-12
 -----------------------
 - Missing {} in an update hook in feedapi.install
@@ -12,7 +21,7 @@ changed.
 - Possibility of saving such feed URLs that are inaccessible for the parser
   for whatever reason
 
-FeedAPI 1.7beta2, XXXX-XX-XX
+FeedAPI 1.7beta2, 2009-06-19
 ----------------------------
 - Drush commands (create, refresh, config)
 - Simpletest 2.x compatible test suite
