--- a/sites/all/modules/contrib/jquery_update/CHANGELOG.txt
+++ b/sites/all/modules/contrib/jquery_update/CHANGELOG.txt
@@ -1,9 +1,15 @@
-// $Id: CHANGELOG.txt,v 1.3.2.1 2008/12/16 00:25:16 mfer Exp $
+// $Id: CHANGELOG.txt,v 1.3.2.1.2.2 2009/04/23 18:15:57 mfer Exp $
+
+jQuery Update 6.x-2.x, xxxx-xx-xx
+---------------------------------
+- Updated to jQuery 1.3.x.
+- Removed Packed version. It is not longer distributed by jQuery.
 
 jQuery Update 6.x-1.x, xxxx-xx-xx
 ---------------------------------
 - Updated to use drupal 7 version of farbtastic.js.
-#227687 by sun: Fixed improperly capitalized package name.
+- #227687 by sun: Fixed improperly capitalized package name.
+- #339105 by bdragon and q0rban. Allow tabledrag to work inside fieldsets.
 
 
 jQuery Update 6.x-1.1, 2008-06-23
