--- a/sites/all/modules/contrib/menu_node/CHANGELOG.txt
+++ b/sites/all/modules/contrib/menu_node/CHANGELOG.txt
@@ -1,6 +1,16 @@
-// $Id: CHANGELOG.txt,v 1.3 2009/05/27 13:45:29 agentken Exp $
+// $Id: CHANGELOG.txt,v 1.5 2009/09/14 14:26:16 agentken Exp $
 
 CHANGELOG for Menu Node
+
+14-SEP-2009
+  -- #568246 by roboneale. Accoutns for revisions to nodes.
+  -- Creates the 6.x.1.3 release.
+
+21-AUG-2009
+  -- #526756 by nonsie and keinstein. Fixes duplicate entry error and book module handling.
+  -- Fixes reversed documentation of the API hook arguments.
+  -- Creates the 6.x.1.2 release.
+  -- Requires running update.php.
 
 27-MAY-2009
   -- Creates the 6.x.1.1 release.
