--- a/sites/all/modules/contrib/feeds/CHANGELOG.txt
+++ b/sites/all/modules/contrib/feeds/CHANGELOG.txt
@@ -1,10 +1,38 @@
-// $Id: CHANGELOG.txt,v 1.20 2009/12/12 13:40:39 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.37 2010/02/08 19:51:54 alexb Exp $
 
-Feeds 6.x 1.0 xxxx, 200x-xx-xx
-------------------------------
+Feeds 6.x 1.0 xxxxx xx, xxxx-xx-xx
+----------------------------------
+
+- #701432 pounard, Will White: Fix array_shift() expects parameter 1 is Array
+  error. Note: Parsers are responsible to ensure that the parameter passed to
+  FeedsImportBatch::setItems() is an Array.
+- #698356 alex_b: Refactor and clean up FeedsScheduler::work() to allow more
+  scheduled tasks than 'import' and 'expire'.
+
+Feeds 6.x 1.0 Alpha 10, 2010-01-25
+----------------------------------
+
+- #647128 bigkevmcd, Michelle: Fix broken author info in FeedsSyndicationParser.
+- alex_b: Add mapping API for FeedsDataProcessor.
+- alex_b: Decode HTML entities for title and author name in
+  FeedsSimplePieParser.
+- #623448 David Goode, alex_b, et al.: Date mapper.
+- #624088 mongolito404, David Goode, alex_b: Imagefield/filefield mapper,
+  formalize feed elements.
+- #584034 aaroncouch, mongolito404: Views integration.
+- Redirect to node or import form after manual import or delete.
+- #663830 Aron Novak, alex_b: When download of URL failed, node w/ empty title
+  is created.
+- #654728 Aron Novak: Fix parsing + data handling error with RDF 1.0 feeds.
+- #641522 mongolito404, alex_b: Consolidate import stage results.
+- #662104 Aron Novak: Specify PHP requirement in .info file.
+- #657374 dtomasch: Common Parser does not get RSS Authors correctly.
+
+Feeds 6.x 1.0 Alpha 9, 2009-12-14
+---------------------------------
 
 - API change: feeds_source() takes an FeedsImporter id instead of an importer,
-  the methods import() and clear() moved from FeedsImporter to FeedsSource. 
+  the methods import() and clear() moved from FeedsImporter to FeedsSource.
   Import from a source with feeds_source($id, $nid)->import();
 - #629096 quickcel: Fix underscores in feed creation link.
 - #652848 BWPanda: Add 'clear-block' to admin-ui to fix float issues.
