fixed syntax issue with double brackets around title

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -495,7 +495,7 @@
 
 @article{King06,
   author =	 {Gary King},
-  title =	 {{Publication, Publication}},
+  title =	 {Publication, Publication},
   journal =	 {PS: Political Science and Politics},
   volume =	 {39},
   year =	 {2006},
