--- a/sites/all/modules/contrib/jquery_ui/CHANGELOG.txt
+++ b/sites/all/modules/contrib/jquery_ui/CHANGELOG.txt
@@ -1,4 +1,4 @@
-// $Id: CHANGELOG.txt,v 1.5.2.2 2009/06/21 03:43:03 sun Exp $
+// $Id: CHANGELOG.txt,v 1.5.2.5 2010/04/02 14:19:54 sun Exp $
 
 jQuery UI x.x-x.x, xxxx-xx-xx
 -----------------------------
@@ -6,6 +6,10 @@ jQuery UI x.x-x.x, xxxx-xx-xx
 
 jQuery UI 6.x-1.x, xxxx-xx-xx
 -----------------------------
+#325831 by hanoii: Fixed drupal_get_path() in hook_requirements() breaks install
+  profiles.
+#758910 by fp, sun: Fixed jQuery UI download link.
+#542908 by sun: Clarified installation instructions.
 
 
 jQuery UI 6.x-1.3, 2009-06-21
