--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -119,7 +119,7 @@
   title =	 {Improving Anchoring Vignettes: Designing Surveys to
                   Correct Interpersonal Incomparability},
   journal =	 {Public Opinion Quarterly},
-  year =	 {2009, forthcoming},
+  year =	 {2009},
   note =	 {http://gking.harvard.edu/files/abs/implement-abs.shtml}
 }
 
@@ -369,7 +369,7 @@
   title =	 {The Future of Political Science: 100 Perspectives},
   publisher =	 {Routledge Press},
   address =	 {New York},
-  year =	 {2009, forthcoming},
+  year =	 {2009},
   editor =	 {Gary King and Kay Schlozman and Norman Nie},
   note =	 {{http://gking.harvard.edu/files/abs/evbase-abs.shtml}}
 }
@@ -380,7 +380,7 @@
   title =	 {The Future of Political Science: 100 Perspectives},
   publisher =	 {Routledge Press},
   address =	 {New York},
-  year =	 {2009, forthcoming},
+  year =	 {2009},
   editor =	 {Gary King and Kay Schlozman and Norman Nie}
 }
 
@@ -446,13 +446,6 @@
   pages =	 {231-241},
   month =	 {March},
   note =         {{http://gking.harvard.edu/files/abs/counterf-abs.shtml}}
-}
-
-@article{WanKinLau07,
-  author =	 {Jonathan Wand and Gary King and Olivia Lau},
-  title =	 {Anchors: Software for Anchoring Vignettes Data},
-  journal =	 {Journal of Statistical Software},
-  year =	 {2007, forthcoming}
 }
 
 @inbook{EpsHoKin06,
@@ -706,6 +699,7 @@
                   Methods and Empiricism},
   chapter =	 {Chapter 36, Determinants of Inequality in Child
                   Survival: Results from 39 Countries},
+  year =	 {2003},
   publisher =	 {World Health Organization},
   pages =	 {497-502},
   address =	 {Geneva},
@@ -815,7 +809,6 @@
   volume =	 {8},
   year =	 {2003},
   number =	 {1},
-  note =	 {{http://gking.harvard.edu/stats.shtml}}
 }
 
 @article{EpsKin02,
@@ -1947,14 +1940,15 @@
                   Archive [Distributor]}}
 }
 
-@article{BecKinZen00b,
-  author =	 {Nathaniel Beck and Gary King and Langche Zeng},
-  title =	 {Replication data for: Improving Quantitative Studies
-                  of International Conflict: A Conjecture},
-  volume =	 {2000},
-  note =	 {{\underline{hdl:1902.1/SZKONDGOMF}
-                  UNF:3:rYRDzT8dCJ/BR7V9u8fObA== Murray Research
-                  Archive [Distributor]}}
+@article {BecKinZen00b,
+	title = {Replication data for: Improving Quantitative Studies of International Conflict: A Conjecture},
+	journal = {American Political Science Review},
+	volume = {94},
+	year = {2000},
+	note = {{\underline{hdl:1902.1/SZKONDGOMF} UNF:3:rYRDzT8dCJ/BR7V9u8fObA== Murray Research Archive [Distributor]}},
+	month = {03/2000},
+	pages = {21-36},
+	author = {Nathaniel Beck and Gary King and Langche Zeng}
 }
 
 @article{KinTomWit00b,
@@ -2099,9 +2093,9 @@
   author =	 {Stefano M. Iacus and Gary King and Giuseppe Porro},
   title =	 {CEM: Coarsened Exact Matching Software},
   journal =	 {Journal of statistical Software},
-  volume =	 30,
-  issue =	 9,
-  year =	 2009,
+  volume =	 {30},
+  issue =	 {9},
+  year =	 {2009},
   note =	 {{http://gking.harvard.edu/cem}}
 }
 
@@ -2109,36 +2103,28 @@
   author =	 {Jonathan Wand and Gary King and Olivia Lau},
   title =	 {Anchors: Software for Anchoring Vignettes Data},
   journal =	 {Journal of Statistical Software},
-  year =	 {2007, forthcoming}
+  year =	 {2007}
 }
 
 @Article{HonKinBLa09,
   author =	 {James Honaker and Gary King and Matthew Blackwell},
   title =	 {Amelia II: A Program for Missing Data},
-  year =	 2009,
+  year =	 {2009},
   note =	 {{http://gking.harvard.edu/amelia}}
 }
 
 @article{ImaKinLau06,
   author =	 {Kosuke Imai and Gary King and Olivia Lau},
   title =	 {Zelig: Everyone's Statistical Software},
-  year =	 2006,
+  year =	 {2006},
   note =	 {{http://gking.harvard.edu/zelig}}
-}
-
-@article{TomWitKin05,
-  author =	 {Michael Tomz and Jason Wittenberg and Gary King},
-  title =	 {CLARIFY: Software for Interpreting and Presenting
-                  Statistical Results},
-  year =	 {1998-2005},
-  note =	 {{http://gking.harvard.edu/stats.shtml#clarify}}
 }
 
 @article{HonJosKin98,
   author =	 {James Honaker and Anne Joseph and Gary King and
                   Kenneth Scheve and Naunihal Singh.},
   title =	 {AMELIA: A Program for Missing Data},
-  year =	 {1998-2002},
+  year =	 {1998},
   note =	 {{http://gking.harvard.edu/amelia}}
 }
 
@@ -2155,7 +2141,7 @@
 @article{King96b,
   author =	 {Gary King},
   title =	 {EI: Program for Ecological Inference},
-  year =	 {1996-2003},
+  year =	 {1996},
   note =	 {{http://gking.harvard.edu/stats.shtml#ei}}
 }
 
@@ -2163,7 +2149,7 @@
   author =	 {Andrew Gelman and Gary King},
   title =	 {JudgeIt: A Program for Evaluating Electoral Systems
                   and Redistricting Plans},
-  year =	 {1992-2002},
+  year =	 {1992},
   note =	 {{http://gking.harvard.edu/stats.shtml#judgeit}}
 }
 
@@ -2172,7 +2158,7 @@
                   Elizabeth A. Stuart},
   title =	 {MatchIt: Nonparametric Preprocessing for Parametric
                   Causal Inference},
-  year =	 {Forthcoming},
+  year =	 {2007},
   journal =	 {Journal of Statistical Software},
   note =	 {{http://gking.harvard.edu/matchit}}
 }
