fixed year value on an entry

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -482,7 +482,7 @@
   title =	 {What to do About Missing Values in Time Series
                   Cross-Section Data},
   journal =	 {American Journal of Political Science},
-  year =	 {2010, forthcoming},
+  year =	 {2010},
   note =	 {{http://gking.harvard.edu/files/abs/pr-abs.shtml}}
 }
 
