added an abstract

--- a/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
@@ -529,6 +529,7 @@ Programme resources reached the poor. However, the programme did not show some o
 	publisher = {Cambridge University Press},
 	organization = {Cambridge University Press},
 	address = {New York},
+	abstract = {Ecological Inference: New Methodological Strategies brings together a diverse group of scholars to survey the latest strategies for solving ecological inference problems in various fields. The last half decade has witnessed an explosion of research in ecological inference -- the attempt to infer individual behavior from aggregate data. The uncertainties and the information lost in aggregation make ecological inference one of the most difficult areas of statistical inference, but such inferences are required in many academic fields, as well as by legislatures and the courts in redistricting, by businesses in marketing research, and by governments in policy analysis.},
 	url = {http://gking.harvard.edu/files/abs/ecinf04-abs.shtml},
 	editor = {Gary King and Ori Rosen and Martin A. Tanner}
 }
