--- a/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
@@ -987,7 +987,7 @@ We review the limited knowledge on the health consequences of conflict, suggest 
 	author = {Andrew Gelman and Gary King and Chuanhai Liu}
 }
 @article {GelKinLiu99b,
-	title = {Rejoinder: Not Asked and Not Answered: Multiple Imputation for Multiple Surveys},
+	title = {Not Asked and Not Answered: Multiple Imputation for Multiple Surveys},
 	journal = {Journal of the American Statistical Association},
 	volume = {93},
 	number = {433},
