fixed titles on 3 publications

--- a/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubsformatted_complete.bib
@@ -639,7 +639,7 @@ Programme resources reached the poor. However, the programme did not show some o
 	author = {Gary King}
 }
 @article {EpsKin03,
-	title = {Building An Infrastructure for Empirical Research in the Law [with comments from four law school deans]},
+	title = {Building An Infrastructure for Empirical Research in the Law},
 	journal = {Journal of Legal Education},
 	volume = {53},
 	number = {311},
@@ -987,7 +987,7 @@ We review the limited knowledge on the health consequences of conflict, suggest 
 	author = {Andrew Gelman and Gary King and Chuanhai Liu}
 }
 @article {GelKinLiu99b,
-	title = {Not Asked and Not Answered: Multiple Imputation for Multiple Surveys},
+	title = {Not Asked and Not Answered: Multiple Imputation for Multiple Surveys: Rejoinder},
 	journal = {Journal of the American Statistical Association},
 	volume = {93},
 	number = {433},
@@ -1095,7 +1095,7 @@ King and Laver (1993) reanalyzed B\&H{\textquoteright}s data and demonstrated in
 	author = {James Honaker and Anne Joseph and Gary King and Kenneth Scheve and Naunihal Singh.}
 }
 @article {King98,
-	title = {MAXLIK, a set of Gauss programs, annotated for pedagogical purposes, to implement the maximum likelihood models in Unifying Political Methodology: The Likelihood Theory of Statistical Inference},
+	title = {MAXLIK},
 	year = {1998},
 	author = {Gary King}
 }
