added notes import function and file

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -795,7 +795,7 @@ We review the limited knowledge on the health consequences of conflict, suggest 
 	author = {Gary King}
 }
 @article {RosJiaKin01,
-	title = {Bayesian and Frequentist Inference for Ecological Inference: The $R \times C$ Case},
+	title = {Bayesian and Frequentist Inference for Ecological Inference: The RxC Case},
 	journal = {Statistica Neerlandica},
 	volume = {55},
 	number = {2},
