added third level taxonomy term importing

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -366,7 +366,7 @@ Programme resources reached the poor. However, the programme did not show some o
 	editor = {Samuel Kernell and Steven S. Smith}
 }
 @article {ImaKinLau06,
-	title = {Zelig: Everyone{\textquoteright}s Statistical Software},
+	title = {Zelig: Everyones Statistical Software},
 	year = {2006},
 	url = {http://gking.harvard.edu/zelig},
 	author = {Kosuke Imai and Gary King and Olivia Lau}
@@ -1529,3 +1529,8 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
 	url = {http://gking.harvard.edu/files/abs/mist-abs.shtml},
 	author = {Gary King}
 }
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+% Additions
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
