fixed book chapter entries and titles

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -64,11 +64,12 @@
 	author = {Gary King and Samir Soneji}
 }
 @inbook {King09b,
-	title = {The Future of Political Science: 100 Perspectives},
+      title = {The Changing Evidence Base of Political Science Research},
+	booktitle = {The Future of Political Science: 100 Perspectives},
 	year = {2009},
 	publisher = {Routledge Press},
 	organization = {Routledge Press},
-	chapter = {The Changing Evidence Base of Political Science Research},
+	title = {The Changing Evidence Base of Political Science Research},
 	address = {New York},
 	abstract = {This (two-page) article argues that the evidence base of political science and the related social sciences are beginning an underappreciated but historic change.},
 	url = {http://gking.harvard.edu/files/abs/evbase-abs.shtml},
@@ -347,19 +348,19 @@ Programme resources reached the poor. However, the programme did not show some o
 	title = {The New Palgrave Dictionary of Economics},
 	year = {2006},
 	edition = {2nd},
-	chapter = {Ecological Inference},
+	booktitle = {Ecological Inference},
 	abstract = {Dictionary entry on the definition of "ecological inference," and a brief summary of the history of ecological inference research.},
 	url = {http://gking.harvard.edu/files/abs/newintro-abs.shtml},
 	author = {Gary King and Ori Rosen and Martin Tanner},
 	editor = {Larry Blume and Steven N. Durlauf}
 }
 @inbook {EpsHoKin06,
-	title = {Principles and Practice in American Politics: Classic and Contemporary Readings},
+       title = {The Effect of War on the Supreme Court},
+	booktitle = {Principles and Practice in American Politics: Classic and Contemporary Readings},
 	year = {2006},
 	publisher = {Congressional Quarterly Press},
 	organization = {Congressional Quarterly Press},
-	edition = {3rd},
-	chapter = {The Effect of War on the Supreme Court},
+	edition = {3rd},	
 	address = {Washington, D.C.},
 	abstract = {Does the U.S. Supreme Court curtail rights and liberties when the nation{\textquoteright}s security is under threat? In hundreds of articles and books, and with renewed fervor since September 11, 2001, members of the legal community have warred over this question. Yet, not a single large-scale, quantitative study exists on the subject. Using the best data available on the causes and outcomes of every civil rights and liberties case decided by the Supreme Court over the past six decades and employing methods chosen and tuned especially for this problem, our analyses demonstrate that when crises threaten the nation{\textquoteright}s security, the justices are substantially more likely to curtail rights and liberties than when peace prevails. Yet paradoxically, and in contradiction to virtually every theory of crisis jurisprudence, war appears to affect only cases that are unrelated to the war. For these cases, the effect of war and other international crises is so substantial, persistent, and consistent that it may surprise even those commentators who long have argued that the Court rallies around the flag in times of crisis. On the other hand, we find no evidence that cases most directly related to the war are affected. We attempt to explain this seemingly paradoxical evidence with one unifying conjecture: Instead of balancing rights and security in high stakes cases directly related to the war, the Justices retreat to ensuring the institutional checks of the democratic branches. Since rights-oriented and process-oriented dimensions seem to operate in different domains and at different times, and often suggest different outcomes, the predictive factors that work for cases unrelated to the war fail for cases related to the war. If this conjecture is correct, federal judges should consider giving less weight to legal principles outside of wartime but established during wartime, and attorneys should see it as their responsibility to distinguish cases along these lines.},
 	author = {Lee Epstein and Daniel E. Ho and Gary King and Jeffrey A. Segal},
@@ -450,12 +451,12 @@ Programme resources reached the poor. However, the programme did not show some o
 	editor = {Gary King and Ori Rosen and Martin A. Tanner}
 }
 @inbook {KinZen04,
-	title = {Encyclopedia of Biopharmaceutical Statistics},
+      title = {Inference in Case-Control Studies},
+	booktitle = {Encyclopedia of Biopharmaceutical Statistics},
 	year = {2004},
 	publisher = {Marcel Dekker},
 	organization = {Marcel Dekker},
-	edition = {2nd},
-	chapter = {Inference in Case-Control Studies},
+	edition = {2nd},	
 	address = {New York},
 	abstract = {Classic (or "cumulative") case-control sampling designs do not admit inferences about quantities of interest other than risk ratios, and then only by making the rare events assumption. Probabilities, risk differences, and other quantities cannot be computed without knowledge of the population incidence fraction. Similarly, density (or "risk set") case-control sampling designs do not allow inferences about quantities other than the rate ratio. Rates, rate differences, cumulative rates, risks, and other quantities cannot be estimated unless auxiliary information about the underlying cohort such as the number of controls in each full risk set is available. Most scholars who have considered the issue recommend reporting more than just the relative risks and rates, but auxiliary population information needed to do this is not usually available. We address this problem by developing methods that allow valid inferences about all relevant quantities of interest from either type of case-control study when completely ignorant of or only partially knowledgeable about relevant auxiliary population information.},
 	url = {http://gking.harvard.edu/files/abs/1s-enc-abs.shtml},
@@ -463,12 +464,13 @@ Programme resources reached the poor. However, the programme did not show some o
 	editor = {Shein-Chung Chow}
 }
 @inbook {GelKatKin04,
-	title = {Rethinking the Vote: The Politics and Prospects of American Electoreal Reform},
+      title ={Empirically Evaluating the Electoral College},
+	booktitle = {Rethinking the Vote: The Politics and Prospects of American Electoreal Reform},
 	year = {2004},
 	pages = {75-88},
 	publisher = {Oxford University Press},
 	organization = {Oxford University Press},
-	chapter = {Chapter 5, Empirically Evaluating the Electoral College},
+	chapter = {5},
 	address = {New York},
 	abstract = {The 2000 U.S. presidential election rekindled interest in possible electoral reform. While most of the popular and academic accounts focused on balloting irregularities in Florida, such as the now infamous "butterfly" ballot and mishandled absentee ballots, some also noted that this election marked only the fourth time in history that the candidate with a plurality of the popular vote did not also win the Electoral College. This "anti-democratic" outcome has fueled desire for reform or even outright elimination of the electoral college. We show that after appropriate statistical analysis of the available historical electoral data, there is little basis to argue for reforming the Electoral College. We first show that while the Electoral College may once have been biased against the Democrats, the current distribution of voters advantages neither party. Further, the electoral vote will differ from the popular vote only when the average vote shares of the two major candidates are extremely close to 50 percent. As for individual voting power, we show that while there has been much temporal variation in relative voting power over the last several decades, the voting power of individual citizens would not likely increase under a popular vote system of electing the president.},
 	url = {http://gking.harvard.edu/files/abs/rethink-abs.shtml},
@@ -476,11 +478,11 @@ Programme resources reached the poor. However, the programme did not show some o
 	editor = {Ann N. Crigler and Marion R. Just and Edward J. McCaffery}
 }
 @inbook {KinRosTan04b,
-	title = {Ecological Inference: New Methodological Strategies},
+       title = {Information in Ecological Inference: An Introduction},
+	booktitle = {Ecological Inference: New Methodological Strategies},
 	year = {2004},
 	publisher = {Cambridge University Press},
-	organization = {Cambridge University Press},
-	chapter = {Information in Ecological Inference: An Introduction},
+	organization = {Cambridge University Press},	
 	address = {New York},
 	author = {Gary King and Ori Rosen and Martin Tanner},
 	editor = {Gary King and Ori Rosen and Martin Tanner}
@@ -580,12 +582,13 @@ Programme resources reached the poor. However, the programme did not show some o
 	author = {Michael Tomz and Jason Wittenberg and Gary King}
 }
 @inbook {GakKin03,
-	title = {Health Systems Performance Assessment: Debates, Methods and Empiricism},
+       title = {Determinants of Inequality in Child Survival: Results from 39 Countries},
+	booktitle = {Health Systems Performance Assessment: Debates, Methods and Empiricism},
 	year = {2003},
 	pages = {497-502},
 	publisher = {World Health Organization},
 	organization = {World Health Organization},
-	chapter = {Chapter 36, Determinants of Inequality in Child Survival: Results from 39 Countries},
+	chapter = {36},
 	address = {Geneva},
 	author = {Emmanuela Gakidou and Gary King},
 	editor = {Chrisopher Murray and David B. Evans}
@@ -602,12 +605,13 @@ Programme resources reached the poor. However, the programme did not show some o
 	editor = {Shein-Chung Chow, ed.}
 }
 @inbook {GilKin03,
-	title = {Numerical Issues in Statistical Computing for the Social Scientist},
+      title = {Numerical Issues Involved in Inverting Hessian Matrices},
+      booktitle = {Numerical Issues in Statistical Computing for the Social Scientist},
 	year = {2003},
 	pages = {143-176},
 	publisher = {John Wiley and Sons, Inc.},
 	organization = {John Wiley and Sons, Inc.},
-	chapter = {Chapter 6, Numerical Issues Involved in Inverting Hessian Matrices},
+	chapter = {6},
 	address = {Hoboken, NJ},
 	author = {Jeff Gill and Gary King},
 	editor = {Micah Altman and Jeff Gill and Michael P. McDonald}
@@ -1592,7 +1596,7 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
 	url = {http://gking.harvard.edu/files/abs/ballots-abs.shtml},
 	author = {Kosuke Imai and Gary King}
 }
-@article{KinSig96,
+@article {KinSig96,
       title =	 {The Generalization in the Generalized Event Count Model, With Comments on Achen, Amato, and Londregan},
       journal =	 {Political Analysis},
       volume =	{ 6},
@@ -1611,14 +1615,14 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
 	title = {JudgeIt II: A Program for Evaluating Electoral Systems and Redistricting Plans},
 	author = {Andrew Gelman and Gary King and Andrew Thomas}
 }
-@article{SteKinShi,
+@article {SteKinShi,
     title =	 {Deaths From Heart Failure: Using Coarsened Exact Matching to Correct Cause of Death Statistics},
     journal =	 {Population Health Metrics},
     abstract = {Background: Incomplete information on death certificates makes recorded cause of death data less useful for public health monitoring and planning. Certifying physicians sometimes list only the mode of death (and in particular, list heart failure) without indicating the underlying disease(s) that gave rise to the death. This can prevent valid epidemiologic comparisons across countries and over time. Methods and Results: We propose that coarsened exact matching be used to infer the underlying causes of death where only the mode of death is known; we focus on the case of heart failure in U.S., Mexican and Brazilian death records. Redistribution algorithms derived using this method assign the largest proportion of heart failure deaths to ischemic heart disease in all three countries (53%, 26% and 22%), with larger proportions assigned to hypertensive heart disease and diabetes in Mexico and Brazil (16% and 23% vs. 7% for hypertensive heart disease and 13% and 9% vs. 6% for diabetes). Reassigning these heart failure deaths increases US ischemic heart disease mortality rates by 6%.Conclusions: The frequency with which physicians list heart failure in the causal chain for various underlying causes of death allows for inference about how physicians use heart failure on the death certificate in different settings. This easy-to-use method has the potential to reduce bias and increase comparability in cause-of-death data, thereby improving the public health utility of death records. Key Words: vital statistics, heart failure, population health, mortality, epidemiology},
     url = {http://gking.harvard.edu/files/abs/heartfcem-abs.shtml},
     author ={Gretchen Stevens and Gary King and Kenji Shibuya}
 }
-@article{SteKinShi96,
+@article {SteKinShi96,
     title =	 {How Not to Lie Without Statistics},
     year = {2008},
     abstract = {We highlight, and suggest ways to avoid, a large number of common misunderstandings in the literature about best practices in qualitative research. We discuss these issues in four areas: theory and data, qualitative and quantitative strategies, causation and explanation, and selection bias. Some of the misunderstandings involve incendiary debates within our discipline that are readily resolved either directly or with results known in research areas that happen to be unknown to political scientists. Many of these misunderstandings can also be found in quantitative research, often with different names, and some of which can be fixed with reference to ideas better understood in the qualitative methods literature. Our goal is to improve the ability of quantitatively and qualitatively oriented scholars to enjoy the advantages of insights from both areas. Thus, throughout, we attempt to construct specific practical guidelines that can be used to improve actual qualitative research designs, not only the qualitative methods literatures that talk about them.},
@@ -1626,14 +1630,14 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
     author ={Gary King and Eleanor Neff Powell}
 }
 
-@article{SonKin09
+@article {SonKin09
     title = {Statistical Security for Social Security},
     year = {2009},
     abstract = {The financial viability of Social Security, the single largest U.S. Government program, depends on accurate forecasts of the solvency of its intergenerational trust fund. We begin by detailing, for the first time, the information necessary to replicate the Social Security Administration's (SSA's) forecasting procedures. We then show how to reduce one of the largest component of uncertainty in these procedures, due to age- and sex-specific mortality forecasts. SSA mortality forecasts are currently based on a complicated combination of linear extrapolation and qualitative judgments. Unfortunately, linear extrapolation excludes known risk factors and violates long-standing demographic patterns, such as the smoothness of age profiles; and modern statistical methods typically outperform even the best qualitative judgments in these contexts. We show how to use such modern methods here, enabling researchers to forecast using far more information, such as the known risk factors of smoking and obesity and known demographic patterns. Including this extra information makes a substantial difference: For example, by only improving mortality forecasting methods, we predict three fewer years of net surplus, $730 billion less in Social Security trust funds by 2030, and program costs that are 0.66% greater of projected taxable payroll compared to the best SSA projections. More important than specific numerical estimates are the advantages of transparency, replicability, reduction of uncertainty, and what may be the resulting lower vulnerability to the politicization of program forecasts. In addition, by offering with this paper easy-to-use software and detailed replication information, we hope to marshal the efforts of the research community to include ever more informative inputs and to continue to reduce the uncertainties in Social Security forecasts.},
     url = {http://gking.harvard.edu/files/abs/ssc-abs.shtml},
     author ={Samir Soneji and Gary King}
 }
-@article{MurKin08,
+@article {MurKin08,
     title = {The Effects of International Monetary Fund Loans on Health Outcomes},
     journal =	 {PLoS Medicine},
     volume = {5},
