--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -1630,7 +1630,7 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
     author ={Gary King and Eleanor Neff Powell}
 }
 
-@article {SonKin09
+@article {SonKin09,
     title = {Statistical Security for Social Security},
     year = {2009},
     abstract = {The financial viability of Social Security, the single largest U.S. Government program, depends on accurate forecasts of the solvency of its intergenerational trust fund. We begin by detailing, for the first time, the information necessary to replicate the Social Security Administration's (SSA's) forecasting procedures. We then show how to reduce one of the largest component of uncertainty in these procedures, due to age- and sex-specific mortality forecasts. SSA mortality forecasts are currently based on a complicated combination of linear extrapolation and qualitative judgments. Unfortunately, linear extrapolation excludes known risk factors and violates long-standing demographic patterns, such as the smoothness of age profiles; and modern statistical methods typically outperform even the best qualitative judgments in these contexts. We show how to use such modern methods here, enabling researchers to forecast using far more information, such as the known risk factors of smoking and obesity and known demographic patterns. Including this extra information makes a substantial difference: For example, by only improving mortality forecasting methods, we predict three fewer years of net surplus, $730 billion less in Social Security trust funds by 2030, and program costs that are 0.66% greater of projected taxable payroll compared to the best SSA projections. More important than specific numerical estimates are the advantages of transparency, replicability, reduction of uncertainty, and what may be the resulting lower vulnerability to the politicization of program forecasts. In addition, by offering with this paper easy-to-use software and detailed replication information, we hope to marshal the efforts of the research community to include ever more informative inputs and to continue to reduce the uncertainties in Social Security forecasts.},
