major cleanup and detial fixes to data consistancy

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -1606,9 +1606,13 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
       url = {http://gking.harvard.edu/files/abs/generaliz-abs.shtml},
       author = {Gary King and Curtis S. Signorino},
 }
-@article {King02,
+@article {Kin02,
 	title = {COUNT: A Program for Estimating Event Count and Duration Regressions},
 	year = {2002},
+	author = {Gary King}
+}
+@article {Kin,
+	title = {ReadMe: Software for Automated Content Analysis},
 	author = {Gary King}
 }
 @article {GelKinTho94,
