--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -500,7 +500,7 @@ Programme resources reached the poor. However, the programme did not show some o
 	author = {Gary King and Kenneth Benoit}
 }
 @article {King04b,
-	title = {Finding New Information for Ecological Inference Models: A Comment on Jon Wakefield, 'Ecological Inference in 2 X 2 Tables'},
+	title = {Finding New Information for Ecological Inference Models: A Comment on Jon Wakefield, 'Ecological Inference in 2X2 Tables'},
 	journal = {Journal of the Royal Statistical Society},
 	volume = {167},
 	number = {Series A},
@@ -1570,7 +1570,7 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
 	url = {http://gking.harvard.edu/files/abs/GutAbrAda09-abs.shtml},
 	author = {Gutmann, Myron P. and Mark Abrahamson and Margaret O. Adams and Micah Altman and	Caroline Arms and Kenneth Bollen and Michael Carlson and Jonathan Crabtree and Darrell Donakowski and Gary King and Jaret Lyle and Marc Maynard and Amy Pienta and Richard Rockwell and Lois Rocms-Ferrara and Copeland H. Young}
 }
-@article {AltAndDigKinKisKolKroVer01
+@article {AltAndDigKinKisKolKroVer01,
 	title = {An Introduction to the Virtual Data Center Project and Software},
 	journal = {Proceedings of The First ACM+IEEE Joint Conference on Digital Libraries},
 	publisher = {ACM Press},
