changes in details

--- a/sites/all/modules/iqss/gkimport/files/gkpubs.bib
+++ b/sites/all/modules/iqss/gkimport/files/gkpubs.bib
@@ -1630,7 +1630,7 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
     title =	 {How Not to Lie Without Statistics},
     year = {2008},
     abstract = {We highlight, and suggest ways to avoid, a large number of common misunderstandings in the literature about best practices in qualitative research. We discuss these issues in four areas: theory and data, qualitative and quantitative strategies, causation and explanation, and selection bias. Some of the misunderstandings involve incendiary debates within our discipline that are readily resolved either directly or with results known in research areas that happen to be unknown to political scientists. Many of these misunderstandings can also be found in quantitative research, often with different names, and some of which can be fixed with reference to ideas better understood in the qualitative methods literature. Our goal is to improve the ability of quantitatively and qualitatively oriented scholars to enjoy the advantages of insights from both areas. Thus, throughout, we attempt to construct specific practical guidelines that can be used to improve actual qualitative research designs, not only the qualitative methods literatures that talk about them.},
-    url = {http://gking.harvard.edu/files/abs/heartfcem-abs.shtml}
+    url = {http://gking.harvard.edu/files/abs/nolie-abs.shtml},
     author ={Gary King and Eleanor Neff Powell}
 }
 
@@ -1649,7 +1649,7 @@ Specifically, an extra $10,000 added to the budget of the average state legislat
     month = {June},
     year = {2008},
     abstract = {A "Perspective article" that discusses an article by David Stuckler and colleagues showing that, in Eastern European and former Soviet countries, participation in International Monetary Fund economic programs have been associated with higher mortality rates from tuberculosis.},
-    url = {http://gking.harvard.edu/files/abs/imftb-abs.shtml}
+    url = {http://gking.harvard.edu/files/abs/imftb-abs.shtml},
     author ={Megan  Murray and Gary King},
 }
 @inbook {GakKin03,
