--- a/sites/all/modules/contrib/features/CHANGELOG.txt
+++ b/sites/all/modules/contrib/features/CHANGELOG.txt
@@ -1,4 +1,64 @@
-// $Id: CHANGELOG.txt,v 1.1.2.5 2009/12/21 23:24:48 yhahn Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.9 2010/06/17 16:16:39 yhahn Exp $
+
+features DRUPAL-6--1-BETA8
+--------------------------
+- #814414: Fix context integration to properly integrate with CTools.
+- #810958 by q0rban: Add censored expletives to my daily workflow.
+
+features DRUPAL-6--1-BETA7
+--------------------------
+- #778250: Fix for php 5.3 issue with CTools.
+- Added static cache to ensure features_include() runs only once.
+- #522794 by Skorpjon, kenorb: Fixes for tar archive creation.
+- #686240 by David Stosik: Ensure field settings are properly captured accross
+  instances.
+- Add the drush features-update-all command and switch to using
+  drush_invoke_backend() to ensure processes have a better memory footprint.
+- Standardize CTools API identifier to fully support non-exportables CTools
+  APIs.
+- Ensure dependencies added by CTools do not create circular dependencies.
+- #798104 by Steven Merrill: Add drush features-revert-all command.
+- #673234 by joshk: Use elseif instead of else if to comply with coding
+  standards.
+- Support additional CTools plugin APIs that are non-exportable based.
+- #722460 by scor: Use 'drupal dependencies' flag in hook_drush_command() to
+  ensure features is enabled.
+- #727110 by adixon: Respect drush --root option.
+- #726700: Context 3.x dependency & component detection.
+- #709608: CTools: don't re-export objects that already exist in code. Depends
+  on #709754.
+- Disable features before installing on submit.
+- #725132 by q0rban: Fix for fieldgroup duplicate entries.
+
+features DRUPAL-6--1-BETA6
+--------------------------
+- #640438: Ensure new features are not created in existing local namespaces.
+- #706950: Fieldgroup component test.
+- #696554 by Amitaibu: Add --force option to features-revert command.
+- #702418 by Haza: Ensure roles are not localized on export when originating
+  from filter formats.
+- #480978 by q0rban: Add fieldgroup support.
+- #680332 by christianchristensen: Ensure each perm has only one instance of
+  each role.
+- #693944: Use strongarm to export CCK extra field weights.
+- #678930: Sort package links.
+- #670788 by jasonitti, andrewfn, irakli: Fix for regex syntax error in PHP
+  <= 5.2.2
+- Use human readable names for dependencies.
+- CTools: Show human readable names for components.
+- #691894: Use human readable names on component display.
+- #682730: Ensure object exists before attempting to render export code.
+- #682730: Using API owner with schema owner as module fallback.
+- #696396 by irakli: sort ctools exportables alphabetically.
+- #694890: Ensure rebuild menu reflects node types
+- Check that a feature has dependencies before trying to maximize them.
+- by mig5, Amitaibu: Update drush commands to use dashes.
+- Init component states array for each feature.
+- Removing features_menu_links() hack in favor of implementers using a
+  preprocess_page() function directly.
+- by Zoltán Balogh: Updated Hungarian translation.
+- #675306: Prevent feaures_detect_overrides() from running unless user is
+  properly permissioned.
 
 features DRUPAL-6--1-BETA5
 --------------------------
