upgraded data to alpha11

--- a/sites/all/modules/contrib/data/CHANGELOG.txt
+++ b/sites/all/modules/contrib/data/CHANGELOG.txt
@@ -1,4 +1,11 @@
-// $Id: CHANGELOG.txt,v 1.1.2.8 2010/01/25 22:12:43 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.1.2.10 2010/03/30 18:20:12 diggersf Exp $
+
+Data 6.x 1.0 Alpha 11, 2010-03-30
+---------------------------------
+
+- #731530 jmiccolis: Add markup field handler.
+- Made the data taxonomy form save on blur.
+
 
 Data 6.x 1.0 Alpha 10, 2010-01-25
 ---------------------------------
