upgraded itweak_upload to 2.3

--- a/sites/all/modules/contrib/itweak_upload/CHANGELOG.txt
+++ b/sites/all/modules/contrib/itweak_upload/CHANGELOG.txt
@@ -1,7 +1,18 @@
-# $Id: CHANGELOG.txt,v 1.1.2.15 2009/08/08 05:07:27 iva2k Exp $
+# $Id: CHANGELOG.txt,v 1.1.2.24 2010/02/11 04:50:10 iva2k Exp $
 
 itweak_upload 6.x-2.x-dev
 -------------------------
+[#561890] by iva2k: Increased weight to 10 (should load after comment_upload.module)
+[#672486] by genox: German translation
+[#642076] by afterdark: Brazilian Portugese translation
+[#646460] by maximpodorov: Fancybox support
+[NOISSUE] by iva2k: Shadowbox support
+[#544058] by iva2k: Crude jCarousel support
+[#575808] by ferdi: Use hook_imagecache_default_presets
+[#706888] by iva2k: Remove images from gallery if user has no permission to view/download them
+[#707360] by iva2k: Making extra checks to ensure image can be rendered
+[#542018] by iva2k: Using image description in lightbox, shadowbox
+SA-CONTRIB-2010-003 by iva2k: remove XSS vulnerability in file names
 
 itweak_upload 6.x-2.2, 2009-08-07
 ---------------------------------
