update activity and news

--- a/sites/all/modules/contrib/activity/INSTALL.txt
+++ b/sites/all/modules/contrib/activity/INSTALL.txt
@@ -18,7 +18,7 @@ _Configuring your activity action:
 NOTE: Since core's trigger/actions UIs are too limiting, we've created our own
 interface to create Activity actions. Activity actions are no longer compatible
 with the core action UI.
-Go to {your_site}/admin/settings/activity. If you currently have no activity
+Go to {your_site}/admin/build/activity. If you currently have no activity
 actions defined, you will be presented with a choice of modules. Choose the one
 in which you want to configure an activity message for. i.e. if you want to
 record an activity message when someone creates a new comment, choose 'Comment'
