--- a/sites/all/modules/contrib/feeds/CHANGELOG.txt
+++ b/sites/all/modules/contrib/feeds/CHANGELOG.txt
@@ -1,4 +1,37 @@
-// $Id: CHANGELOG.txt,v 1.107 2010/06/23 15:24:24 alexb Exp $
+// $Id: CHANGELOG.txt,v 1.127 2010/07/19 02:54:36 alexb Exp $
+
+Feeds 6.x 1.0 Beta 3, 2010-07-18
+--------------------------------
+
+- #854628 DanielJohnston, alex_b: Fix user processor assigns all roles.
+- #838018 infojunkie: Mapper for Formatted Number CCK field.
+- #856408 c.ex: Pass all $targets for hook_feeds_node_processor_targets_alter()
+  by reference.
+- #853194 andrewlevine, alex_b: Mapping: don't reset all targets.
+- #853144 alex_b: Consistent use of "replace" vs "update".
+- #850998 alex_b: Clean up file upload form. Note: If you supply file paths
+  directly in the textfield rather than uploading them through the UI, you will
+  have to adjust your importer's File Fetcher settings.
+- #850652 alex_b: Make ParserCSV (instead of FeedsCSVParser) populate column
+  names.
+- #850638 alex_b: Introduce FeedsSource::preview().
+- #850298 alex_b: ParserCSV: Support batching (only affects library, full parser
+  level batch support to be added later with #744660).
+- Minor cleanup of admin UI language and CSS.
+- #647222 cglusky, jeffschuler: Specify input format for feed items.
+
+Feeds 6.x 1.0 Beta 2, 2010-07-10
+--------------------------------
+
+- #753426 Monkey Master, andrewlevine, alex_b: Partial update of nodes.
+- #840626 andrewlevine, alex_b: Support using same mapping target multiple
+  times.
+- #624464 lyricnz, alex_b: Fix to "support tabs as delimiters".
+- #840350 lyricnz: (Optionally) Transliterate enclosure filenames to provide
+  protection from awkward names.
+- #842040 dixon_: Accept all responses from the 2xx status code series.
+- #836982 Steven Merrill: Fix Feeds.module tests do not work when run from the
+  command line.
 
 Feeds 6.x 1.0 Beta 1, 2010-06-23
 --------------------------------
