--- a/sites/all/modules/contrib/jquery_update/CHANGELOG.txt
+++ b/sites/all/modules/contrib/jquery_update/CHANGELOG.txt
@@ -1,9 +1,15 @@
-// $Id: CHANGELOG.txt,v 1.3.2.1.2.2 2009/04/23 18:15:57 mfer Exp $
+// $Id: CHANGELOG.txt,v 1.3.2.1.2.4 2010/04/23 16:37:46 sun Exp $
 
 jQuery Update 6.x-2.x, xxxx-xx-xx
 ---------------------------------
+
+
+jQuery Update 6.x-2.0-alpha1, 2010-04-23
+----------------------------------------
+#452376 by jcmarco, CPyle, markus_petrux: Fixed tabledrag.js override for Views.
 - Updated to jQuery 1.3.x.
 - Removed Packed version. It is not longer distributed by jQuery.
+
 
 jQuery Update 6.x-1.x, xxxx-xx-xx
 ---------------------------------
@@ -18,6 +24,7 @@ jQuery Update 6.x-1.1, 2008-06-23
   compatibility.
 - Added version detection to only replace jquery.js if core's version is older.
 - Allow selection of jquery.js compression from admin settings page.
+
 
 jQuery Update 6.x-1.0, 2008-05-26
 ---------------------------------
